<resources>
    <string name="app_name">LA League</string>
    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="title_feature">Feature</string>
    <string name="title_account">Account</string>

    <string name="text_my_assets">My Assets</string>
    <string name="text_new_to_us">New to us?</string>
    <string name="text_my_assets_note">View and manage your assets after login</string>
    <string name="text_your_email_address">Your Email Address</string>
    <string name="text_password">Password</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_firstname">First Name</string>
    <string name="text_lastname">Last Name</string>
    <string name="text_email_address">Email Address</string>
    <string name="text_phone_number">Phone Number</string>
	<string name="text_sms">SMS</string>
    <string name="text_password_confirm">Password Confirm</string>
    <string name="text_reference_number">Reference Number</string>
    <string name="text_my_balance">My Balance</string>
    <string name="text_my_order">My Order</string>
    <string name="text_about">About</string>
    <string name="text_price">Price</string>
    <string name="text_amount">Amount</string>
    <string name="text_buy">Buy</string>
    <string name="text_sell">Sell</string>

    <string name="button_usdt">USDT</string>
    <string name="button_btc">BTC</string>
    <string name="button_eth">ETH</string>
    <string name="button_submit">submit</string>
    <string name="button_login">Log in</string>
    <string name="button_register">Register</string>
    <string name="button_sms_send">Send SMS</string>
    <string name="button_buy">Buy</string>
    <string name="button_sell">Sell</string>
    <string name="button_limit_order">Limit Order</string>
</resources>