<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_weight="2"
		android:layout_height="0dp"
		android:paddingLeft="20dp"
		android:paddingTop="20dp" >

		<ImageView
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:src="@drawable/logo_login" />
		
	</RelativeLayout>
	
	<RelativeLayout 
		android:layout_width="fill_parent"
		android:layout_weight="1"
		android:layout_height="0dp"
		android:paddingLeft="50dp"
		android:paddingRight="50dp" >

		<EditText
			android:id="@+id/username"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:inputType="text"
			android:layout_centerVertical="true"
			android:hint="@string/text_your_email_address" />

	</RelativeLayout>
	
	<RelativeLayout 
		android:layout_width="fill_parent"
		android:layout_weight="1"
		android:layout_height="0dp"
		android:paddingLeft="50dp"
		android:paddingRight="50dp" >

		<EditText
			android:id="@+id/password"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:inputType="text"
			android:layout_centerVertical="true"
			android:hint="@string/text_password" />

	</RelativeLayout>
	
	<RelativeLayout 
		android:layout_width="fill_parent"
		android:layout_weight="1"
		android:layout_height="0dp"
		android:paddingLeft="50dp"
		android:paddingRight="50dp" >

		<com.saminthebox.info.customview.LoadingButton
			android:id="@+id/login"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:clickable="true" />

	</RelativeLayout>

	<RelativeLayout 
		android:layout_width="fill_parent"
		android:layout_weight="3"
		android:layout_height="0dp" >

		<LinearLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="50dp"
			android:orientation="horizontal"
			android:layout_alignParentBottom="true" >

			<TextView
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="fill_parent"
				android:paddingRight="6dp"
				android:gravity="right"
				android:text="@string/text_new_to_us"
				android:textColor="#000000"
				android:textSize="16dp" />

			<TextView
                android:id="@+id/signup"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="fill_parent"
				android:paddingLeft="6dp"
				android:text="@string/text_sign_up"
				android:textStyle="bold"
				android:textColor="@color/colorPrimary"
				android:textSize="16dp" />

		</LinearLayout>

	</RelativeLayout>

</LinearLayout>
